Working guessing game